[package]
name = "codesec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["desktop", "fermi"] }
log = "0.4.14"
platform-dirs = "0.3.0"
serde = "1.0.136"
serde_json = "1.0.79"
simplelog = "0.11.2"
# fermi = { git = "https://github.com/dioxuslabs/fermi" }